force-app/main/default/objects/User/fields/api_key__c.field-meta.xml
<CustomField>
    <fullName>api_key__c</fullName>
    <label>api key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>