force-app/main/default/objects/User/fields/campaign_name__c.field-meta.xml
<CustomField>
    <fullName>campaign_name__c</fullName>
    <label>campaign name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>