force-app/main/default/objects/User/fields/CLE__User_Type_Engage__c.field-meta.xml
<CustomField>
    <fullName>CLE__User_Type_Engage__c</fullName>
    <label>User Type (Engage)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Pre Sales</fullName>
            </value>
            <value>
                <fullName>Post Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>