force-app/main/default/objects/User/fields/CRM_Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>CRM_Team_Leader__c</fullName>
    <label>CRM Team Leader</label>
    <relationshipName>CRM_Team_Leaders</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>