force-app/main/default/objects/User/fields/customer__c.field-meta.xml
<CustomField>
    <fullName>customer__c</fullName>
    <label>customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>