force-app/main/default/objects/User/fields/Emp_Id__c.field-meta.xml
<CustomField>
    <fullName>Emp_Id__c</fullName>
    <label>Emp Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>