force-app/main/default/objects/User/fields/Enable_International_Calling__c.field-meta.xml
<CustomField>
    <fullName>Enable_International_Calling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable International Calling</label>
    <type>Checkbox</type>
</CustomField>