force-app/main/default/objects/User/fields/Last_Call_Received__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Received__c</fullName>
    <label>Last Call Received</label>
    <length>18</length>
    <type>Text</type>
</CustomField>