force-app/main/default/objects/User/fields/Last_Lead_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Lead_Assigned_Date__c</fullName>
    <label>Last Lead Assigned Date</label>
    <type>DateTime</type>
</CustomField>