force-app/main/default/objects/User/fields/Nice_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Nice_User_ID__c</fullName>
    <description>Used to store the user ID of Nice CX one external system.</description>
    <externalId>true</externalId>
    <label>Nice User ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>