force-app/main/default/objects/User/fields/OzoneTel_AgentId__c.field-meta.xml
<CustomField>
    <fullName>OzoneTel_AgentId__c</fullName>
    <label>OzoneTel AgentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>