force-app/main/default/objects/User/fields/OzoneTel_Username__c.field-meta.xml
<CustomField>
    <fullName>OzoneTel_Username__c</fullName>
    <label>OzoneTel Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>