force-app/main/default/objects/User/fields/PCC_Submit_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>PCC_Submit_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required to be true if the user requires and option to Submit PCC for approval.</description>
    <label>PCC Submit for Approval</label>
    <type>Checkbox</type>
</CustomField>