force-app/main/default/objects/User/fields/PropStrength__Assignment_Group_Active__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Assignment_Group_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment Group Active</label>
    <type>Checkbox</type>
</CustomField>