force-app/main/default/objects/User/fields/sessionID__c.field-meta.xml
<CustomField>
    <fullName>sessionID__c</fullName>
    <label>sessionID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>