force-app/main/default/objects/User/fields/Special_Payment_Plan_Visible__c.field-meta.xml
<CustomField>
    <fullName>Special_Payment_Plan_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Payment Plan Visible</label>
    <type>Checkbox</type>
</CustomField>