force-app/main/default/objects/User/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AVAILABLE</fullName>
                <label>Available</label>
            </value>
            <value>
                <fullName>BUSY</fullName>
                <label>Busy</label>
            </value>
            <value>
                <fullName>BREAK</fullName>
                <label>Break</label>
            </value>
            <value>
                <fullName>OUTCALL</fullName>
                <label>OutCall</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>