force-app/main/default/objects/User/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <displayFormat>U - {0000}</displayFormat>
    <label>User Id</label>
    <type>AutoNumber</type>
</CustomField>