force-app/main/default/objects/User/fields/VCC1__Phone__c.field-meta.xml
<CustomField>
    <fullName>VCC1__Phone__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( Phone , &apos;-&apos;, &apos;&apos;) , &apos;)&apos;, &apos;&apos;), &apos;(&apos;, &apos;&apos;), &apos; &apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>