force-app/main/default/objects/User/fields/VCC1__User_Type__c.field-meta.xml
<CustomField>
    <fullName>VCC1__User_Type__c</fullName>
    <inlineHelpText>Used For VCC</inlineHelpText>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Pre Sales</fullName>
            </value>
            <value>
                <fullName>Post Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>