force-app/main/default/objects/User/fields/VP_Name__c.field-meta.xml
<CustomField>
    <fullName>VP_Name__c</fullName>
    <formula>Manager.Manager_Name__c</formula>
    <label>VP Name</label>
    <type>Text</type>
</CustomField>