force-app/main/default/objects/User/validationRules/Manager_field_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Manager_field_is_mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(ManagerId)</errorConditionFormula>
    <errorMessage>Manager cannot be left blank</errorMessage>
</ValidationRule>