force-app/main/default/objects/User/validationRules/Prevent_Edit_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edit_Access</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS( $User.ProfileId,&apos;00e1t000000VNpj&apos;)</errorConditionFormula>
    <errorMessage>Sales users cannot edit the user</errorMessage>
</ValidationRule>